[FIX] web: restore `o_form_sheet_bg` `padding-top` if no statusbar
This commit fixes an issue introduced Commit[1]. With Commit[1], the
statusbar of our form views is now sticky. To achieve the right visual
result, the top padding defined on `.o_form_sheet_bg` had to be removed
to avoid a weird gap.

While this changed unlocked the desired visual result, it introduced an
issue on form views without statusbar, making the form sheet stick to the
control panel, as it it the case in `Contacts` for instance.

To prevent this behaviour, we use a conditional approach to handle the `padding`.

Commit[1]: a3c63413825cf3492a10ade77a2c571c4eeb33a6

task-4286105
related to task-3419566

closes odoo/odoo#185293

--- a/addons/web/static/src/views/form/form_controller.scss
+++ b/addons/web/static/src/views/form/form_controller.scss
@@ -250,6 +250,10 @@
         width: 100%;
         max-width: $o-form-view-sheet-max-width;
         margin-right: auto; // Always align to le left
+
+        &:not(:has(.o_form_statusbar)) {
+            padding-top: map-get($spacers, 2);
+        }
     }
 
     // Sheet
